<resources>
    <string name="app_name">Insane Alarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_alarm">Add alarm</string>
    <string name="quickAlarm">Alarme rapide</string>
    <string name="alarm">Alarme</string>
    <string name="reminder">Rappel</string>
    <string name="add">Ajout</string>
    <string name="listitemsetting">listItemSetting</string>
    <string name="alarmType_temp">Type d\'alarme</string>

    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="unique">Une seule fois</string>
    <string name="edit">Éditer</string>
    <string name="preview">Prévisualiser</string>
    <string name="delete">Supprimer</string>
    <string name="addAlarm">Ajouter une alarm</string>
    <string name="addAlarmBtn">Ajouter !</string>
    <string name="frequency">Fréquence</string>
    <string name="test">Tester</string>
    <string name="discard">Annuler</string>
    <string name="myAlarm">Mon Alarme</string>
    <string name="dismissAlarm">Désactivation de l\'alarme</string>
    <string name="snoozeAlarm">Snooze de l\'alarme</string>
    <string name="wakeupCheck">Vérification du réveil</string>
    <string name="soundAlarm">Son de l\'alarme</string>
    <string name="name">Name</string>
    <string name="tvSoundTitle">Choisir le son de l\'alarme</string>
    <string name="tvIncreaseVolume">Monter le volume quand l\'alarme se déclenche</string>
    <string name="tvSameAsPhone">Prioriser le même volume sonore que celui du téléphone</string>
    <string name="tvAlarmVolume">Volume de l\'alarme</string>
    <string name="setting">Paramètres</string>
    <string name="tvRingtone">Sonnerie</string>
    <string name="tvNeedVibration">Vibrer quand l\'alarme sonne</string>
    <string name="tvFlashLight">Choisir le type de flash lorsque l\'alarme sonne</string>
    <string name="alarmSoundFlashByFlash">Par flash</string>
    <string name="alarmSoundFlashStay">Allumé en continu</string>
    <string name="alarmSoundFlashNone">Éteint</string>
    <string name="alarmFromDevice">Depuis votre bigo</string>
    <string name="fromDevice">Depuis l\'application</string>
    <string name="alarmSnooze">Snooze de l\'alarme</string>
    <string name="controls">Contrôles</string>
    <string name="tasks">Tâches</string>
    <string name="snoozeTime">Le temps de Snooze</string>
    <string name="snoozeLimit">Nombre de snooze Maximum possible</string>
    <string name="iterate">itération(s)</string>
    <string name="min">min</string>
    <string name="tvSnoozeDesc">Si vous voulez ou pas un snooze, vous pourrez ainsi choisir les paramètres d\'activation et de désactivatotion du snooze.</string>
    <string name="snooze">Snooze</string>
    <string name="tvDismiss">Désactivation</string>
    <string name="tvAutoDismiss">Désactivation automatique de l\'alarme après un laps de temps</string>
    <string name="minutes">minutes</string>
    <string name="secondes">secondes</string>
    <string name="tvControls">Choissez comment vous voulez snooze et désactiver votre alarme</string>
    <string name="tvOnscreen">Bouton sur l\'écran</string>
    <string name="tvVolume">Boutons de volume</string>
    <string name="tvPower">Bouton power</string>
    <string name="tvShake">Secouer le bigo</string>
    <string name="tvTaskTitle">Quelles taches pour désactiver mon snooze/ alarm</string>
    <string name="rbTaskNone">Rien</string>
    <string name="rbTaskMath">Maths</string>
    <string name="rbTaskWrite">Écrire</string>
    <string name="difficulty">Difficulté</string>
    <string name="tvMuteSound">Muter l\'alarme quand on doit faire la tâche</string>
    <string name="tvTaskTimer">Temps maxi par tache (après le délai, une nouvelle tache recomence), si 0 pas de temps</string>
    <string name="tvNumberTask">Nombre de taches</string>
    <string name="tvSkipTask">Autorise à passer si trop dur</string>
    <string name="titleTaskSnooze">Pour désactiver le Snooze !</string>
    <string name="titleDismissSnooze">Pour désactiver l\'alarme !</string>
    <string name="taskDifficultyEasy">Facile</string>
    <string name="taskDifficultyMedium">Moyenne</string>
    <string name="taskDifficultyHard">Difficile</string>
    <string name="taskWriteEasy">azertyuiop</string>
    <string name="taskWriteMedium">Bonjour bonjour !!!</string>
    <string name="taskWriteHard">Il est l\'heure de se réveiller !!!</string>
    <string name="tvWakeUpCheck">Ajouter une vérification de votre réveil effectif</string>
    <string name="tvDelayAfterDismiss">Temps après la vérification du réveil</string>
    <string name="tvCountdownTime">Temps d\'apparition de la notification pour vérifier le bon reveil (après ce laps de temps la sonnerie s\'enclenchera</string>
    <string name="tvDoingTaskTitle">Tâche à faire : </string>
    <string name="oupada">Oupada</string>
    <string name="okBaby">OK baby</string>
    <string name="oneCalcul">Un calcul</string>
    <string name="recopyText">Recopier du texte</string>
    <string name="remingTime">\"Temps restant : \"</string>
    <string name="noValidateInfoTask">Le résultat proposé n\'est pas bon…</string>

</resources>