<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <TextView
        android:id="@+id/textView4"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="268dp"
        android:layout_height="27dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/alarmSnooze"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/layoutActivateSnooze"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/snooze"
                tools:ignore="NestedWeights" />

            <Switch
                android:id="@+id/switchActivateSnooze"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:checked="true"
                android:clickable="false"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvSnoozeDesc"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutOptionalSettings"
        android:layout_width="0dp"
        android:layout_height="547dp"
        android:layout_marginTop="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActivateSnooze"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/layoutControl"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_corner"
            android:clickable="true"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/controls" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTask"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/layout_corner"
            android:clickable="true"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutControl">

            <TextView
                android:id="@+id/tvWakeupCheckup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tasks" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTask" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <LinearLayout
                android:id="@+id/layoutSnoozeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="0dp"
                android:paddingVertical="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:text="@string/snoozeTime" />

                <NumberPicker
                    android:id="@+id/npSnoozeTime"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.913"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="56dp"
                    android:layout_height="31dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/min" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSnoozeLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="214dp"
                    android:layout_height="38dp"
                    android:text="@string/snoozeLimit" />

                <NumberPicker
                    android:id="@+id/npSnoozeLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.913"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/iterate" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>