<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/tvWakeUpCheck"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutActivateWkupChck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:text="@string/tvMuteSound" />

        <Switch
            android:id="@+id/switchActivateWkupChck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActivateWkupChck"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layoutDelayAfterDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp"
            android:paddingVertical="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:text="@string/tvDelayAfterDismiss" />

            <NumberPicker
                android:id="@+id/npDelayAfterDismiss"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.913"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="56dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/secondes" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCountdownTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="211dp"
                android:layout_height="73dp"
                android:text="@string/tvCountdownTime" />

            <NumberPicker
                android:id="@+id/npTCountdownTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.913"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/secondes" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>